assets/css/style.css
* {
    margin: 0;
    font-family: Ubuntu, sans-serif;
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.row-nowrap {
    display: flex;
    flex-wrap: nowrap;
}

.col-full {
    width: 100%;
}

.column-half {
    width: 50%;
}

.column-3rd {
    width: 33%;
}

.column-4th {
    width: 25%;
}

.column-10th {
    width: 10%
}

.logo-head {
    height: 6rem
}

#logo-container {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    height: 8rem;
}

#nhs-logo {
    margin-right: 1rem;
    width: 9rem;
    height: max-content;
}

#watch-logo {
    width: 37rem;
    height: max-content;
}

nav {
    background-color: rgb(127, 0, 127);
    margin-top: 1.2rem;
    height: 3.75rem;
}

nav ul {
    height: 60px;
    list-style-type: none;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding-inline-start: 0;
}

nav li {
    font-size: 1.6em
}

nav a {
    color: white;
    text-decoration: none;
    padding: 20px;
}

nav a:hover {
    color: #EBBD17;
}

.active a {
    background-color: #fff;
    color: rgb(127, 0, 127);
}

.active a:hover {
    color: rgb(127, 0, 127)
}

.dropbtn {
    background-color: rgb(127, 0, 127);
    color: white;
    font-size: 1em;
    border: none;
    cursor: pointer;
    padding: 15px;
  }
  
  .dropdown {
    position: relative;
    display: inline-block;
  }
  
  /* Dropdown Content (Hidden by Default) */
  .dropdown-content {
    display: none;
    white-space: nowrap;
    position: absolute;
    background-color: rgba(235, 189, 23, 0.9);
    min-width: fit-content;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  /* Links inside the dropdown */
  .dropdown-content a {
    color: rgb(127, 0, 127);
    padding: 12px 16px;
    text-decoration: none;
    display: block;
  }
  
  /* Show the dropdown menu on hover */
  .dropdown:hover .dropdown-content {
    display: block;
  }

.dropbtn:hover {
    color:#EBBD17;
}

.dropdown-content a:hover {
    color: black;
}

#active-btn {
    background-color: #fff;
    color: rgb(127, 0, 127);
}

.dropdown-content .active-a{
    color: #fff;
}

#hero-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;
    margin-top: 5px;
    position: relative;
} 

#cover-text, #cover-text h2{
    color: #fff;
}

#hero-image {
    height: 600px;
    width: 100%;
    background: url(/assets/images/WATCH\ ambulance.jpg) no-repeat 40% 85%;

    animation-name: hero-zoom;
    animation-duration: 10s;
    animation-fill-mode: forwards;
}


@keyframes hero-zoom {
    from {
        transform: scale(1);
    }
    to { transform: scale(1.1);

    }
}

#cover-text {
    font-size: 115%;
    letter-spacing: 4px;
    width: 18.75rem;
    height: 9.4rem;
    padding: 40px 20px 0 20px;
    background-color: rgba(127, 0, 127, 0.7);
    bottom: 10%;
    right: 10rem;
    position: absolute;
}

#cover-text a {
    color: #fff;
}

#cover-text a:hover {
    color: rgb(235, 189, 23)
}

#summary{
    margin: 30px 10% 0 10%;
}

#summary p {
    font-size: larger;
}

#summary .page-text {
    padding: 1% 0 1% 0;
    width: 90%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: flex-start;
}

.buttons {
    display: flex;
    justify-content: space-around;
    padding: 50px;
}

.out-btn {
    padding-bottom: 2rem;
}
.out-btn a {
    display: flex;
    justify-content: center;
    flex-direction: row;
    flex-wrap: wrap;
    max-width: min-content;
    align-items: flex-end;
    text-decoration: none;
    color: #fff;
}

.purple-btn {
    height: 100px;
    width: 100px;
    background-color: rgb(127, 0, 127);
    border-radius: 50%;

}

.out-btn a:hover .purple-btn, .out-btn:hover .big-btn {
    background-color: #EBBD17;
}

.in-btn{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px;
    width: 100px;
    text-align: center;
}

.in-btn i {
    font-size: 200%;
}

.out-btn a h2 {
    white-space: nowrap;
    color: #504a4b;
    padding-top: 8px;
}

.header {
    color:rgb(127, 0, 127)
}

.page-text-out {
    display: flex;
    justify-content: center;
}

.page-text {
    padding: 1% 0 1% 0;
    width: 90%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: flex-start;
}

.page-text ul {
    width: 100%;
    list-style-type: none;
    padding: 0;
    margin: 0;
    margin-bottom: 1em
}

.page-text ul span li {
    padding-left: 1rem;
}


.page-text p {
    padding: 0 0 1em 0;
}

.page-text p span {
    font-weight: 600;
}


.page-text a {
    color: rgb(127, 0, 127);
}

.page-text a:visited {
    color: rgb(127, 0, 127);
}

.page-text a:hover {
    color: #000;
}

.hero-section {
    padding-top: 5px;
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    font-size: larger;
}

.hero-section h1 {
    padding-left: 2%;
    color: rgb(127, 0, 127);
}

.section-half {
    width: 100%;
    height: fit-content;
    display: flex;
    margin-bottom: 1rem;
}

#ambulance-corner {
    width: 50%;
    min-height: 24rem;
    background: url(/assets/images/ambulances.jpg) 50% 30% no-repeat;
    margin-left: 1%;
}

.image-right {
    width: 50%;
    white-space: wrap;
    padding: 10px 4% 0 20px;
}

#team-photo {
    width: 100%;
    min-height: 24rem;
    background: url(/assets/images/ambulance-team.jpg) 40% 50% no-repeat;
    margin: 0 2% 2% 2%;
}

.column-3rd {
    margin: 0 .1rem;
}

#referral-corner {
    width: 50%;
    background: url(/assets/images/referral.jpg) 40% 30% no-repeat;
    background-size: 55rem;
}

#referral-right .buttons {
    padding-top: 4rem;
}


#drug-corner {
    width: 50%;
    background: url(/assets/images/pills.jpg) 24% 96% no-repeat;
    background-size: 46rem;
    height: 17rem;
}

#guideline-image {
    width: 50%;
    background: url(/assets/images/guidelines.jpg) 40% 50% no-repeat;
    background-size: 80rem;
}

#family-corner {
    width: 50%;
    background: url(/assets/images/family\ in\ hospital.jpg) 25% 50% no-repeat;
    background-size: 55rem;
}

#contact-image {
    width: 50%;
    background: url(/assets/images/ambulances-away.jpeg) 40% 40% no-repeat;
    background-size: 52rem;
}

.big-btn {
    height: 10rem;
    width: 20rem;
    background-color: rgb(127, 0, 127);
    border-radius: 2rem;
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content: center;
    align-items: center;
}

.big-btn p {
    font-size: 200%;
}

#btn-space {
    display: flex;
    justify-content: space-around;
}

#drug-btn {
    width: 100%;
    height: fit-content;
    display: flex;
    justify-content: center;
    margin-bottom: 1rem;
}

#footer-border {
    display: flex;
    justify-content: center;
}

#border {
    border-top-style: solid;
    width: 90%;
    height: 20px;
    border-width: 2px;
}

#pre-footer {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: nowrap;
    padding: 15px;
}

#pre-footer img {
    height: 10rem;
}

footer {
    background-color: #504a4b;
    padding: 10px;
    display: flex;
}

footer p {
    color: #fff;
}

.toggle {
    z-index:2;
    height: 3.75rem;
    width: 3.75rem;
    position: absolute;
    top: 7.2rem;
    left: 0;
    cursor: pointer;
    display: none;
}

.hamburger {
    position: absolute;
    top: 7.2rem;
    left: 0;
    height: 3.75rem;
    width: 3.75rem;
    display: none;
    color: white;
}

.menu {
    display: none;
    position: relative;
    white-space: nowrap;
    background-color: rgba(235, 189, 23, 0.9);
    width: 100%;
    box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
    z-index: 1;
    top: 4rem;
}

.menu a {
    color: rgb(127, 0, 127);
    padding: 12px 16px;
    text-decoration: none;
    width: 100%;
    flex-wrap: wrap;
    font-size: 1.25rem;
    text-align: center;
}

.menu .active {
    background-color: #fff;
}

.menu a:hover {
    color: #000;
}

@media screen and (max-width:1100px) {
    .column-3rd {
        width: 100%
    }
}

@media screen and (max-width: 950px) {
    nav ul {
        display: none;
    }

    .hamburger {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .toggle {
        display: flex;
        align-items: center;
        justify-content: center;
        opacity: 0;
    }

    .toggle:checked ~ .menu {
        display: flex
    }

    .buttons {
    flex-direction: column;
    align-items: center;
    }

    #watch-logo {
        width: 62%;
    }
    
    #nhs-logo {
        width: 15%;
    }

    #pre-footer img {
        width: auto;
        height: 4rem;
    }

    .section-half {
        flex-wrap: wrap;
    }

    #ambulance-corner, .image-right, #team-photo{
        width: 100%;
    }

    .page-text {
        justify-content: unset;
    }

    .big-btn {
        width: 10rem;
        height: 5rem;
    }

    #drug-corner {
        height: auto;
    }

    .big-btn p {
        font-size: 100%;
    }

    .row-nowrap {
        flex-direction: column;
    }

}

@media screen and (max-width: 500px) {
    #cover-text {
        left: 0;
    }
}

